# agentpause

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: fleet_facade_quickstart.py  fleet_quickstart.py  kv_llamacpp_demo.py  langgraph_quickstart.py  litellm_groq.py  local_resource_budget_quickstart.py  local_resources_quickstart.py  migrate_fork.py  quickstart.py
scripts/: benchmark_groq.py  quality_ab.py  stress_test.py  validate_provider.py  verify_local_resources.py
src/agentpause/: __init__.py  attention.py  breaker.py  coordinator.py  errors.py  estimator.py  fallback.py  fleet.py  forecast.py  llamacpp_kv.py  refill.py  regression.py  retry.py  risk.py  router.py  scheduler.py  state.py  tools.py
src/agentpause/adapters/: __init__.py  anthropic.py  langgraph.py  litellm.py  local_resources.py  openai_compat.py
tests/: test_anthropic_adapter.py  test_async.py  test_attention.py  test_breaker.py  test_coordinator.py  test_estimator.py  test_estimator_evolution.py  test_fallback.py  test_field_adoptions.py  test_fleet.py  test_forecast.py  test_fork_migrate.py  test_io_tpm.py  test_langgraph_adapter.py  test_latency_budget.py  test_litellm_adapter.py  test_llamacpp_kv.py  test_local_resources.py  test_money_and_hooks.py  test_openai_compat.py  test_quantile.py  test_refill_wait.py  test_regime.py  test_regression.py  test_risk.py  test_robustness.py  test_router.py  test_scheduler.py  test_smart_context.py  test_state.py  test_tool_quota.py  test_wait_and_rpm.py
