[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpause"
version = "0.4.0"
description = "Predictive scheduling for autonomous LLM agents: suspend gracefully before rate limits, resume without losing work."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Andrea Lelio Ciampolillo" }]
keywords = ["llm", "agents", "rate-limiting", "checkpointing", "scheduler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
litellm = ["litellm>=1.40"]
langgraph = ["langgraph>=0.2"]
gpu = ["nvidia-ml-py>=12"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
